* Remove AN and KV country codes as they're not recognized by ISO-3166-1 [apdunston]
* Worldpay: Pass unchanged amount with correct currency exponent [curiousepic]
* Improve our handling of currencies sans fractions [duff]
* Stripe: Added support for the contactless magstripe entry mode option [rbalsdon]
* VisaNet Peru: Change money format to dollars [shasum]
* BlueSnap: Add gateway [duff]


== Version 1.58.0 (March 1, 2016)
* Move Electron check out of CreditCard into CreditCardMethods [ThereExistsX]
* CardStream: Add AED and NZD currencies [sdball]
* App55: Remove Gateway [ThereExistsX]
* Mercury: Stripping the start and end sentinels on card-present track data for max-length track1 requests [ryanbalsdon]
* SagePay: Update VISA Electron ranges [sdball]
* Clearhaus: Make request signing more transparent & robust [sdball]
* NCRSecurePay: Fix production URL [rwdaigle]
* Add ACH support to Stripe [sdball]
* PayPal Express: Fixing list of currencies without fractions [Krystosterone]
* Cashnet: Default custcode option and proper redirect handling [rwdaigle]
* TransFirst: Fix missing address and remove CC only fields for ACH [davidsantoso]
* More prominent links to contribution docs [rwdaigle]


== Version 1.57.0 (February 1, 2016)
* AuthorizeNetCim: Add unmaskExpirationDate option [RamilGilmanov]
* Element: Add gateway support [davidsantoso]
* Cardstream: 3D-secure capture fix [duff]
* Auth.net: Update store to create payment profiles [davidsantoso]
* CyberSource: Add support for mdd_fields [duff]
* Worldpay: Add support for verify [davidsantoso]
* Element: Add guard clause to handle undocumented errors [davidsantoso]
* Clearhaus: Add tests for signed requests [anellis]
* Stripe: Support adding cards to account [anellis]
* Clearhaus: Add text_on_statement option [anellis]
* Payeezy: Void and verify support [davidsantoso]
* Creditcall: Use ecommerce rather than cnp [duff]
* Payeezy: Add support for echecks [davidsantoso]