@@ -41,6 +41,7 @@
 * Stripe: Added support for the contactless magstripe entry mode option [rbalsdon]
 * VisaNet Peru: Change money format to dollars [shasum]
 * BlueSnap: Add gateway [duff]
+* VisaNet Peru: Select the most meaningful gateway error message [shasum]
 
 
 == Version 1.58.0 (March 1, 2016)
